--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey="testsq:project"
-sonar.projectName="testsq"
-sonar.projectVersion="1.0"
-sonar.sources="."
-sonar.sourceEncoding="UTF-8"
-sonar.organization="sirincan-github"
-sonar.host.url="https://sonarcloud.io"
-sonar.login="937936c1e2f08b3e158a9b36705854747b7eccd2"
+sonar.projectKey=testsq:project
+sonar.projectName=testsq
+sonar.projectVersion=1.0
+sonar.sources=.
+sonar.sourceEncoding=UTF-8
+sonar.organization=sirincan-github
+sonar.host.url=https://sonarcloud.io
+sonar.login=937936c1e2f08b3e158a9b36705854747b7eccd2
